--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@
             </div>
           </div>
     </main>
-    <script src="script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
